backend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lomashwood
  labels:
    name: lomashwood
    environment: production
